Bugfix on Story details page not showing lists of people correctly anymore.

--- a/Bieb.Web/Content/styles/Site.scss
+++ b/Bieb.Web/Content/styles/Site.scss
@@ -99,6 +99,7 @@ a {
 .panel-primary {
 	color: $background-color;
 	background-color: $main-color;
+	border-width: 0;
 
 	h1 {
 		font-size: 1.65em;
